--- a/templates/viewHistory.html
+++ b/templates/viewHistory.html
@@ -198,7 +198,7 @@
                 loaderLogin.classList.remove('hidden');
 
                 document.getElementById('hiUser').innerText = `${sessionStorage.getItem('userEmail')}`;
-                fetch("http://localhost:3000/getAllureFiles", {
+                fetch("/getAllureFiles", {
                     method: "POST",
                     headers: {
                         "Content-Type": "application/json"
@@ -235,7 +235,7 @@
                 // Show loader
                 loaderLogin.classList.remove('hidden');
 
-                fetch("http://localhost:3000/remove-token", {
+                fetch("/remove-token", {
                     method: "POST",
                     headers: {
                         "Content-Type": "application/json"
